<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_main"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

   <!--<TextView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:text="@string/welcome"
       android:padding="25dp"
       android:textSize="25sp"
       android:textColor="@color/colorText"
       android:background="@color/colorPrimaryDark"
       android:textAlignment="center"

       />
-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/logo"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/username"
        android:textSize="@dimen/normal_font_size"
        android:gravity="center_vertical"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/username_hint"
        android:textSize="@dimen/normal_font_size"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/password"
        android:textSize="@dimen/normal_font_size"
        android:gravity="center_vertical"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/password_hint"
        android:textSize="@dimen/normal_font_size"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">

        <Button
            android:onClick="dashboard"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/button_font_size"
            android:background="@color/colorPrimaryText"
            android:textColor="@color/colorText"
            android:text="@string/reset"
        />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:textSize="@dimen/button_font_size"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorText"
        android:text="@string/login"

        />



</LinearLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:padding="5dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/register"
        android:textSize="@dimen/button_font_size"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"

        />

</LinearLayout>